// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container > Style should render the Container with checked true 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  width: 52px;
  height: 24px;
  border-radius: 12px;
  background-color: #8d8d8d;
  outline: 2px solid;
  outline-color: transparent;
  background-color: #24A148;
}

.c0:focus {
  outline-color: #0043CE;
}

<div
  className="c0 sc-bdnylx c0 css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  tabIndex="0"
/>
`;

exports[`Container > Style should render the Container with disabled true 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  width: 52px;
  height: 24px;
  border-radius: 12px;
  background-color: #8d8d8d;
  outline: 2px solid;
  outline-color: transparent;
  background-color: #e0e0e0;
  outline-color: transparent;
}

<div
  aria-disabled={true}
  className="c0 sc-bdnylx c0 css-view-1dbjc4n r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
  disabled={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
/>
`;

exports[`Container > Style should render the Container with size small 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  width: 32px;
  height: 16px;
  border-radius: 100px;
  background-color: #8d8d8d;
  outline: 2px solid;
  outline-color: transparent;
}

<div
  className="c0 sc-bdnylx c0 css-view-1dbjc4n r-cursor-1loqt21 r-touchAction-1otgn73 r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
  data-focusable={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  tabIndex="0"
/>
`;

exports[`Wrapper > Style should render the Wrapper with disabled true 1`] = `
.c0 {
  position: absolute;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  background-color: #fff;
  top: 3px;
  left: 3px;
  -webkit-transition: left 0.25s ease;
  -webkit-transition: left 0.25s ease;
  transition: left 0.25s ease;
  background-color: #8d8d8d;
}

<div
  aria-disabled={true}
  className="c0 sc-gtssRu c0 css-text-901oao"
  dir="auto"
  disabled={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
/>
`;

exports[`Wrapper > Style should render the Wrapper with size large and checked 1`] = `
.c0 {
  position: absolute;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  background-color: #fff;
  top: 3px;
  left: 3px;
  -webkit-transition: left 0.25s ease;
  -webkit-transition: left 0.25s ease;
  transition: left 0.25s ease;
  -webkit-transition: left 0.25s ease;
  -webkit-transition: left 0.25s ease;
  transition: left 0.25s ease;
  left: 31px;
}

<div
  checked={true}
  className="c0 sc-gtssRu c0 css-text-901oao r-cursor-1loqt21 r-touchAction-1otgn73"
  data-focusable={true}
  dir="auto"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size="large"
  tabIndex="0"
/>
`;

exports[`Wrapper > Style should render the Wrapper with size small 1`] = `
.c0 {
  position: absolute;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background-color: #fff;
  top: 3px;
  left: 3px;
  -webkit-transition: left 0.25s ease;
  -webkit-transition: left 0.25s ease;
  transition: left 0.25s ease;
}

<div
  className="c0 sc-gtssRu c0 css-text-901oao r-cursor-1loqt21 r-touchAction-1otgn73"
  data-focusable={true}
  dir="auto"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size="small"
  tabIndex="0"
/>
`;

exports[`Wrapper > Style should render the Wrapper with size small and checked true 1`] = `
.c0 {
  position: absolute;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background-color: #fff;
  top: 3px;
  left: 3px;
  -webkit-transition: left 0.25s ease;
  -webkit-transition: left 0.25s ease;
  transition: left 0.25s ease;
  -webkit-transition: left 0.25s ease;
  -webkit-transition: left 0.25s ease;
  transition: left 0.25s ease;
  left: 19px;
}

<div
  checked={true}
  className="c0 sc-gtssRu c0 css-text-901oao r-cursor-1loqt21 r-touchAction-1otgn73"
  data-focusable={true}
  dir="auto"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size="small"
  tabIndex="0"
/>
`;
